# starve

./: .gitignore  LICENSE  README.md  stack.yaml  starve.cabal
app/: Main.hs
src/: Lib.hs  Types.hs
test/: TypesSpec.hs
