name:                starve
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/pepegar/starve
license:             BSD3
license-file:        LICENSE
author:              Pepe García
maintainer:          jl.garhdez@gmail.com
copyright:           2016 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib, Types
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson == 0.10.0.0
                     , lens == 4.13
                     , lens-aeson == 1.0.0.5
                     , text == 1.2.2.0
                     , optparse-applicative == 0.12.1.0

executable starve
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , starve
                     , optparse-applicative == 0.12.1.0

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
                     , TypesSpec
  build-depends:       base
                     , starve
                     , hspec
                     , QuickCheck
                     , aeson == 0.10.0.0

source-repository head
  type:     git
  location: https://github.com/pepegar/starve
